[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/Items/image_part_004.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Item/Item.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 3.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.25, 4.75 )

[node name="Item" type="KinematicBody2D"]
z_index = 1
input_pickable = true
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.25, -4.25 )
shape = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="."]

[node name="RotateCheck" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RotateCheck"]
position = Vector2( -2, -4 )
shape = SubResource( 2 )
[connection signal="mouse_entered" from="." to="." method="_on_Item_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Item_mouse_exited"]
[connection signal="body_entered" from="RotateCheck" to="." method="_on_RotateCheck_body_entered"]
